--- a/amazon_sentiment/amazon_sentiment.ipynb
+++ b/amazon_sentiment/amazon_sentiment.ipynb
@@ -33,7 +33,8 @@
         "id": "2M3HUJbqqP9I"
       },
       "source": [
-        "## 1. Importing Libraries and Preparing the Environment\n",
+        "<a id=\"section-1\"></a>\n",
+        "# 1. Importing Libraries and Preparing the Environment\n",
         "In this step, we import the necessary Python libraries to build our sentiment classification model. These libraries include PyTorch, transformers, and others required for data processing and model training."
       ]
     },
