Update table of contents

--- a/amazon_sentiment/amazon_sentiment.ipynb
+++ b/amazon_sentiment/amazon_sentiment.ipynb
@@ -15,15 +15,15 @@
       "metadata": {},
       "source": [
         "# Table of Contents\n",
-        "1. [Importing Libraries and Preparing the Environment](amazon_sentiment.ipynb#1-importing-libraries-and-preparing-the-environment)\n",
-        "2. [Downloading and Decompressing the Dataset](amazon_sentiment.ipynb#2-downloading-and-decompressing-the-dataset)\n",
-        "3. [Previewing the Data](amazon_sentiment.ipynb#3-previewing-the-data)\n",
-        "4. [Data Preprocessing](amazon_sentiment.ipynb#4-data-preprocessing)\n",
-        "5. [Exploring Dataset Labels](amazon_sentiment.ipynb#5-exploring-dataset-labels)\n",
-        "6. [Configuring the BERT Model](amazon_sentiment.ipynb#6-configuring-the-bert-model)\n",
-        "7. [Fine-Tuning BERT for Sentiment Analysis](amazon_sentiment.ipynb#7-fine-tuning-bert-for-sentiment-analysis)\n",
-        "8. [Evaluation on Test Data](amazon_sentiment.ipynb#8-evaluation-on-test-data)\n",
-        "9. [Future Direction](amazon_sentiment.ipynb#9-future-direction)\n",
+        "1. [Importing Libraries and Preparing the Environment](#1-importing-libraries-and-preparing-the-environment)\n",
+        "2. [Downloading and Decompressing the Dataset](#2-downloading-and-decompressing-the-dataset)\n",
+        "3. [Previewing the Data](#3-previewing-the-data)\n",
+        "4. [Data Preprocessing](#4-data-preprocessing)\n",
+        "5. [Exploring Dataset Labels](#5-exploring-dataset-labels)\n",
+        "6. [Configuring the BERT Model](#6-configuring-the-bert-model)\n",
+        "7. [Fine-Tuning BERT for Sentiment Analysis](#7-fine-tuning-bert-for-sentiment-analysis)\n",
+        "8. [Evaluation on Test Data](#8-evaluation-on-test-data)\n",
+        "9. [Future Direction](#9-future-direction)\n",
         "    "
       ]
     },
@@ -33,7 +33,7 @@
         "id": "2M3HUJbqqP9I"
       },
       "source": [
-        "<a id=\"section-1\"></a>\n",
+        "<a id=\"1-importing-libraries-and-preparing-the-environment\"></a>\n",
         "# 1. Importing Libraries and Preparing the Environment\n",
         "In this step, we import the necessary Python libraries to build our sentiment classification model. These libraries include PyTorch, transformers, and others required for data processing and model training."
       ]
@@ -72,7 +72,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. Downloading and Decompressing the Dataset\n",
+        "\n",
+        "<a id=\"2-downloading-and-decompressing-the-dataset\"></a>\n",
+        "# 2. Downloading and Decompressing the Dataset\n",
+        "\n",
         "The dataset for this project was downloaded from Kaggle. It contains product reviews labeled with sentiment scores (positive or negative). We use the Kaggle API to download the dataset and then decompress it."
       ]
     },
@@ -111,7 +114,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. Previewing the Data\n",
+        "<a id=\"3-previewing-the-data\"></a>\n",
+        "# 3. Previewing the Data\n",
         "Here, we preview the first few lines of the train and test files to get a sense of the data format. Each line in the dataset contains a sentiment label and a product review."
       ]
     },
@@ -169,7 +173,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 4. Data Preprocessing\n",
+        "<a id=\"4-data-preprocessing\"></a>\n",
+        "# 4. Data Preprocessing\n",
         "Before feeding the data into the model, we need to preprocess the text (e.g., tokenization and cleaning) so that the BERT model can properly interpret it. This step will involve converting text into token IDs and padding them to the correct length for input to the BERT model."
       ]
     },
@@ -244,7 +249,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. Exploring Dataset Labels\n",
+        "<a id=\"5-exploring-dataset-labels\"></a>\n",
+        "# 5. Exploring Dataset Labels\n",
         "Before training, we examine the distribution of labels in the dataset. This helps ensure the dataset is balanced and provides insights into the classification task."
       ]
     },
@@ -364,7 +370,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Configuring the BERT Model\n",
+        "<a id=\"6-configuring-the-bert-model\"></a>\n",
+        "# 6. Configuring the BERT Model\n",
         "We initialize the hyperparameters and configurations for fine-tuning the BERT model. This includes batch size, learning rates, warm-up steps, and other critical parameters."
       ]
     },
@@ -389,7 +396,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 7. Fine-Tuning BERT for Sentiment Analysis\n",
+        "<a id=\"7-fine-tuning-bert-for-sentiment-analysis\"></a>\n",
+        "# 7. Fine-Tuning BERT for Sentiment Analysis\n",
         "In this section, we define the process for training the BERT model on the sentiment analysis task. The model will be fine-tuned using the preprocessed Amazon reviews dataset. The training loop includes loss calculation, backpropagation, and gradient clipping to ensure stable training."
       ]
     },
@@ -588,7 +596,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 8. Evaluation on Test Data\n",
+        "<a id=\"8-evaluation-on-test-data\"></a>\n",
+        "# 8. Evaluation on Test Data\n",
         "After training, we evaluate the model's performance on the test dataset to measure its effectiveness. Metrics such as accuracy and F1-score are used to assess the model."
       ]
     },
@@ -650,7 +659,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9. Future Direction"
+        "<a id=\"9-future-direction\"></a>\n",
+        "# 9. Future Direction"
       ]
     },
     {
